# NexaLauncher-Cracked

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: admin.rs  automation.rs  backup.rs  cleanup.rs  gaming.rs  hardware.rs  mod.rs  network.rs  profiles.rs  profiles_v2.rs  runtime.rs  scanner.rs  startup_apps.rs  system.rs  tweaks.rs
src-tauri/src/engine/: automation.rs  backup.rs  executor.rs  logger.rs  mod.rs  recommendations.rs  runtime.rs  scanner.rs  tweak.rs
src-tauri/src/gaming/: games.rs  launchers.rs  mod.rs  overlays.rs  readiness.rs  session.rs
src-tauri/src/profiles/: battery_saver.rs  competitive_fps.rs  creative.rs  defaults.rs  everyday.rs  gaming.rs  lowend.rs  manager.rs  minimal.rs  mod.rs  performance.rs  privacy.rs  quiet.rs  streaming.rs
src-tauri/src/system/: benchmark.rs  hardware.rs  info.rs  mod.rs  network.rs  processes.rs  services.rs  startup_apps.rs  storage.rs
src-tauri/src/tweaks/: annoyances.rs  battery.rs  cleanup.rs  gaming.rs  mod.rs  network.rs  performance.rs  power.rs  privacy.rs  startup.rs  visual.rs
src-tauri/src/utils/: admin.rs
src/hooks/: useChangeLog.ts  useProfiles.ts  useSystem.ts  useTweaks.ts
src/lib/: tauri.ts  types.ts
src/pages/: Advanced.tsx  Annoyances.tsx  Automation.tsx  ChangeLog.tsx  Cleanup.tsx  Dashboard.tsx  Diagnostics.tsx  Gaming.tsx  Performance.tsx  Tweaks.tsx  (+5 more)
(+21 files in other folders)
